# CodeMind

./: .env.example  .env.ps1.example  .gitignore  README.md  dev.ps1  dev.sh  pyproject.toml
examples/: agent_core_quickstart.py  coding_agent_interactive_mode.py  coding_agent_print_mode.py  coding_agent_quickstart.py  coding_agent_resume_quickstart.py  quickstart.py
src/agent_core/: __init__.py  agent.py  agent_loop.py  types.py
src/ai/: __init__.py  api_registry.py  env_api_keys.py  event_stream.py  models.py  overflow.py  stream.py  types.py
src/ai/providers/: __init__.py  _common.py  anthropic.py  openai_compatible.py  register_builtins.py
src/coding_agent/: __init__.py  agent_session.py  builtin_tools.py  cli.py  command_registry.py  convert_to_llm.py  factory.py  resources.py  runner.py  serde.py  session_store.py  system_prompt.py  types.py
src/coding_agent/extensions/: __init__.py  api.py  loader.py  skills.py  types.py
src/coding_agent/mcp/: __init__.py  bridge.py
src/im/: __init__.py  cli.py  events.py  feishu.py  feishu_longconn.py  memory.py  server.py  service.py  session_router.py  types.py
tests/: test_agent_core_loop.py  test_coding_agent_cli.py  test_coding_agent_mcp.py  test_coding_agent_resources.py  test_coding_agent_runner.py  test_coding_agent_session_store.py  test_im_events.py  test_im_feishu.py  test_im_longconn.py  test_im_service.py
