[project]
name = "xingclaw"
version = "0.2.0"
description = "XingClaw: unified LLM API + agent core + IM bridge (Feishu)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
feishu = ["lark-oapi>=1.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
xingclaw = "coding_agent.cli:main"
xingclaw-im = "im.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
